# configs-repo

./: .editorconfig  .env.example  .gitignore  .structure_pkg.json  .structure_pkg.schema.json  CHECKLIST.md  Cargo.toml  LICENSE  MLS.sln  Makefile  README.md  ape-config.yaml  docker-compose.infra.yml  docker-compose.yml  hardhat.config.js  pyproject.toml  slint.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  session.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/copilot-rules/: rule-designer-blocks.md  rule-function-as-file.md  rule-hyperlink-enums.md  rule-no-uniswap.md  rule-payload-envelope.md  rule-session-complete.md  rule-single-file-module.md
.github/workflows/: build-and-test.yml  ci.yml  container-deploy.yml  docker-build.yml  dynamic-merge.yml  issue-review.yml  ml-runtime.yml  model-training.yml  package-distribution.yml  pages.yml  session-01-core-contracts.yml  session-02-block-controller.yml  workflow-runner.yml
.prompts/: README.md  session-01.prompt.md  session-02.prompt.md  session-03.prompt.md  session-04.prompt.md  session-05.prompt.md  session-06.prompt.md  session-07.prompt.md  session-08.prompt.md  session-09.prompt.md  session-10.prompt.md  session-11.prompt.md  session-12.prompt.md  session-13.prompt.md  session-14.prompt.md  session-15.prompt.md  session-16.prompt.md  session-17.prompt.md  session-18.prompt.md  session-19.prompt.md  session-20.prompt.md
.prompts-update/: BCG-MASTER-SESSION-SCHEDULE.md  BCG_Master_Session_Schedule.md  BCG_Session_01_Extended_Document.md  BCG_Session_02_Extended_Document.md  BCG_Session_03_Extended_Document.md  BCG_Session_04_Extended_Document.md  BCG_Session_06_Extended_Document.md  BCG_Session_07_Extended_Document.md  BCG_Session_08_Extended_Document.md  BCG_Session_09_Extended_Document.md  BCG_Session_10_Extended_Document.md  BCG_Session_11_Extended_Document.md  BCG_Session_12_Extended_Document.md  BCG_Session_13_Extended_Document.md  BCG_Session_14_Extended_Document.md  BCG_Session_15_Extended_Document.md  BCG_Session_16_Extended_Document.md  BCG_Session_17_Extended_Document.md  BCG_Session_18_Extended_Document.md  BCG_Session_19_Extended_Document.md  BCG_Session_20_Extended_Document.md
.skills/: agents.md  ai-hub.md  artificial-intelligence.md  beast-development.md  designer.md  dotnet-devs.md  exchange-adapters.md  folder-structures.md  hydra-collector.md  machine-learning.md  networking.md  premium-ui.md  premium-uiux-blazor.md  prompt-builder.md  pwa-chrome.md  python.md  semantic-kernel.md  storage-data-management.md  system-architect.md  web-apps.md  web3.md  websockets-inferences.md
.skills/acceleration/: acceleration.md
.skills/models/: model-a.md  model-d.md  model-t.md
designer-templates/arbitrage/: camelot-dfyn-spread.json  nhop-3leg-arb.json
designer-templates/defi/: morpho-yield-optimizer.json
designer-templates/ml-training/: model-t-full-pipeline.json
designer-templates/trading/: mean-reversion.json  momentum-long.json
docs/: api-reference.md  architecture.md  payload-schemas.md  review-guide.md  session-schedule.md  storage-controller.md
docs/architecture/: ai-hub-providers.md  canvas-mdi-layout.md  designer-block-graph.md  exchange-adapters.md  giga-scale-plan.md  hydra-data-collection.md  module-topology.md  performance-baselines.md  performance-semantics.md  session-07-block-action-tiles.md  (+3 more)
infra/: docker-compose.yml
nuxt-pages/: nuxt.config.ts  package-lock.json  package.json
scripts/: new-module.sh  new-session.sh
sessions/: ai-prompts.md  configs.md  goals.md  instructions.md  restrictions.md  rules.md
tests/: test_placeholder.py
(+886 files in other folders)
