[workspace]
resolver = "2"

# Uncomment and add your workspace members when adding Rust crates:
# members = [
#   "src/modules/auth",
#   "src/modules/storage",
#   "src/modules/compute",
# ]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = []
repository = ""

[workspace.dependencies]
# ─── Async runtime ───────────────────────────────────────────────────────────
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# ─── Web / WebSocket ─────────────────────────────────────────────────────────
axum        = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }

# ─── Serialisation ───────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ─── Database ────────────────────────────────────────────────────────────────
sqlx        = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis       = { version = "0.25", features = ["tokio-comp", "aio"] }

# ─── IPFS ────────────────────────────────────────────────────────────────────
reqwest     = { version = "0.12", features = ["json", "stream"] }

# ─── Observability ───────────────────────────────────────────────────────────
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }

# ─── Utilities ───────────────────────────────────────────────────────────────
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1"
thiserror   = "1"
dotenvy     = "0.15"
config      = "0.14"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
