[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project"
version = "0.1.0"
description = "Containerised, network-first project template"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # ─── Web / WebSocket ───────────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "httpx>=0.27",

    # ─── Serialisation / Validation ────────────────────────────────────
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # ─── Database ──────────────────────────────────────────────────────
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",

    # ─── IPFS ──────────────────────────────────────────────────────────
    "aioipfs>=0.7.1,<0.8",

    # Solidity (Python-based via Ape Framework)
    "eth-ape>=0.8",
    "ape-solidity>=0.8",

    # ─── Observability ─────────────────────────────────────────────────
    "structlog>=24",

    # ─── Utilities ─────────────────────────────────────────────────────
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
